# katsdpcontroller

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Jenkinsfile  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test-requirements.in  test-requirements.txt
conf/: .screenrc_mc  fabfile.py  sdp-master-controller.conf  sdpmc.conf  supervisord.conf
conf/certs/: ca-key.pem  ca.pem  ca.srl  cert.pem  client.csr  key.pem  server-cert.pem  server-key.pem  server.csr
conf/docker-base/: Dockerfile  id_rsa  id_rsa.pub
conf/docker_keys/: ca.pem  cert.pem  key.pem
conf/graphs/: mkat_ar1_cbfsim_logical.py
conf/registry/: Dockerfile  README.md  nginx.conf  preload.patch
conf/registry-web/: Dockerfile
katsdpcontroller/: __init__.py  consul.py  controller.py  dashboard.py  defaults.py  fake_servers.py  generator.py  master_controller.py  product_config.py  product_controller.py  scheduler.py  sdpcontroller.py  sensor_proxy.py  singularity.py  tasks.py  test_graph.py  web.py  web_utils.py
katsdpcontroller/assets/: bWLwgP.css  remove-undo.css
katsdpcontroller/schemas/: __init__.py  gpus.json  infiniband_devices.json  interfaces.json  numa.json  nvidia_container_runtime.json  product_config.json  product_config.json.j2  s3_config.json  streams.json  volumes.json  zk_state.json  zk_state.json.j2
katsdpcontroller/templates/: haproxy.conf.j2  index.html.j2  missing_gui.html.j2  rotate_sd.html.j2  task_details.html.j2
katsdpcontroller/test/: fake_katportalclient.py  fake_singularity.py  fake_zk.py  test_consul.py  test_master_controller.py  test_product_config.py  test_product_controller.py  test_scheduler.py  test_sdp_controller.py  test_sensor_proxy.py  test_tasks.py  test_web.py  utils.py
katsdpgraphs/: __init__.py  bc856M4k_logical.py  bc856M4ksim_logical.py  c856M32k_logical.py  c856M32ksim_logical.py  c856M4k_logical.py  c856M4ksim_logical.py  generator.py  mkat_ar1_cbf_logical.py  mkat_ar1_cbfsim_logical.py  rts_c856M4ksim_logical.py
katsdpproxy/: __init__.py  sdpproxy.py
katsdpproxy/test/: test_sdp_proxy.py
sandbox/: .gitignore  README.md  docker-compose.yml  elk-setup.sh  grafana-setup.sh  minio-setup.py  prepare.sh  s3_config.json  update-local-registry.py
sandbox/config/: .gitignore  sim_vlbi_local.cfg
sandbox/etc/: group  logstash.conf  logtrail.json  passwd
sandbox/etc/consul.d/: poweroff_server.json
sandbox/etc/elk/: Dockerfile.kibana-logtrail  elasticsearch-pipeline.json  kibana-settings.json  sdp-messages.json
sandbox/etc/grafana/dashboards/: imaging.json  subarray-view.json
sandbox/etc/grafana/provisioning/dashboards/: dashboards.yml
sandbox/etc/logstash/: elasticsearch-template.json
sandbox/etc/prometheus/: prometheus.yml
sandbox/etc/singularity/: singularity.yaml
sandbox/gui-urls/: elk.json  mesos.json  prometheus.json  sdp-master-controller.json  singularity.json
sandbox/mesos-slave/: .gitignore
scripts/: agent-mkconfig.py  agent_mkconfig.py  docker_build.sh  docker_label_helper.py  haproxy_disp.py  sdp_master_controller.py  sdp_product_controller.py  sdp_proxy.py  sdpmc_dependencies.py  test_graph.py
src/katsdpcontroller/: __init__.py  agent_mkconfig.py  aggregate_sensors.py  consul.py  controller.py  dashboard.py  defaults.py  diagnose_insufficient.py  fake_servers.py  generator.py  master_controller.py  product_config.py  product_controller.py  scheduler.py  sensor_proxy.py  singularity.py  tasks.py  web.py  web_utils.py
src/katsdpcontroller/assets/: disconnected.css
src/katsdpcontroller/schemas/: __init__.py  gpus.json  gpus.yaml  infiniband_devices.json  infiniband_devices.yaml  interfaces.json  interfaces.yaml  numa.json  numa.yaml  product_config.json.j2  product_config.yaml.j2  s3_config.json  s3_config.yaml  streams.yaml  subsystems.json  subsystems.yaml  volumes.json  volumes.yaml  zk_state.json.j2  zk_state.yaml.j2
src/katsdpcontroller/static/: delay_run.sh
src/katsdpcontroller/templates/: haproxy.conf.j2  task_details.html.j2
src/katsdpcontroller/test/: fake_singularity.py  test_consul.py  test_master_controller.py  test_product_config.py  test_product_controller.py  test_scheduler.py  test_sensor_proxy.py  test_web.py  utils.py
test/: conftest.py  fake_katportalclient.py  fake_singularity.py  fake_zk.py  lstopo-no-numa-multi-l3.xml  lstopo-no-numa.xml  lstopo-numa.xml  test_agent_mkconfig.py  test_aggregate_sensors.py  test_consul.py  test_diagnose_insufficient.py  test_master_controller.py  test_product_config.py  test_product_controller.py  test_scheduler.py  test_sensor_proxy.py  test_tasks.py  test_web.py  utils.py
(+1 files in other folders)
