[metadata]
name = katsdpcontroller
description = Service providing control and monitoring services for the MeerKAT Science Data Processor
long_description = file: README.md
long_description_content_type = text/markdown
license = Modified BSD
author = MeerKAT SDP Team
author_email = sdpdev+katsdpcontroller@ska.ac.za
url = https://github.com/ska-sa/katsdpcontroller
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
install_requires =
    addict!=2.0.*,!=2.4.0
    aiohttp~=3.5
    aiohttp-jinja2
    aiokatcp>=0.6.1
    aiozk
    async_timeout
    dash>=1.18.*
    dash-core-components
    dash-html-components
    dash-table
    dash-dangerously-set-inner-html
    decorator
    docker
    jinja2
    jsonschema>=3.0   # Version 3 implements Draft 7
    katdal
    katsdpmodels[aiohttp]
    katsdptelstate[aio]
    katsdpservices[argparse,aiomonitor]
    katportalclient
    kazoo
    netifaces
    networkx>=2.0
    numpy
    prometheus_async
    prometheus_client>=0.3.0,<0.4.0   # 0.4.0 forces _total suffix
    pydot             # For networkx.drawing.nx_pydot
    pymesos>=0.3.6    # 0.3.6 implements reviveOffers with roles
    rfc3987           # Used by jsonschema to validate URLs
    yarl
    www-authenticate
python_requires = >=3.8
scripts =
    scripts/sdp_master_controller.py
    scripts/sdp_product_controller.py
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
agent =
    psutil
    py3nvml
    pycuda

test =
    aioresponses>=0.6.4
    asynctest
    nose
    open-mock-file

[options.package_data]
katsdpcontroller =
    static/*
    schemas/*
    templates/*
    assets/*
