################################################################################
# Copyright (c) 2013-2023, National Research Foundation (SARAO)
#
# Licensed under the BSD 3-Clause License (the "License"); you may not use
# this file except in compliance with the License. You may obtain a copy
# of the License at
#
#   https://opensource.org/licenses/BSD-3-Clause
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
################################################################################

[metadata]
name = katsdpcontroller
description = Service providing control and monitoring services for the MeerKAT Science Data Processor
long_description = file: README.md
long_description_content_type = text/markdown
license = Modified BSD
author = MeerKAT SDP Team
author_email = sdpdev+katsdpcontroller@ska.ac.za
url = https://github.com/ska-sa/katsdpcontroller
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
install_requires =
    addict!=2.0.*,!=2.4.0
    aiohttp~=3.9
    aiohttp-jinja2
    aiokatcp>=2.0.0
    aiozk
    async_timeout
    dash>=1.18
    dash-core-components
    dash-html-components
    dash-table
    dash-dangerously-set-inner-html
    decorator
    docker
    importlib-resources
    jinja2
    jsonschema>=3.0   # Version 3 implements Draft 7
    katdal
    katsdpmodels[aiohttp]
    katsdptelstate[aio]
    katsdpservices[argparse,aiomonitor]>=1.3
    katportalclient
    kazoo
    netifaces
    networkx>=2.0
    numpy
    packaging
    prometheus_async
    prometheus_client>=0.3.0,<0.4.0   # 0.4.0 forces _total suffix
    pydot             # For networkx.drawing.nx_pydot
    pymesos>=0.3.6    # 0.3.6 implements reviveOffers with roles
    rfc3987           # Used by jsonschema to validate URLs
    yarl
    www-authenticate
python_requires = >=3.8
scripts =
    scripts/sdp_master_controller.py
    scripts/sdp_product_controller.py
zip_safe = False  # Need importlib.resources.files to return a real path

[options.packages.find]
where = src

[options.extras_require]
agent =
    psutil
    py3nvml
    pycuda

test =
    aioresponses>=0.6.4
    async-solipsism>=0.7
    open-mock-file
    pyfakefs
    pytest
    pytest-asyncio>=0.23
    pytest-mock
    pytest-timeout

[options.package_data]
katsdpcontroller =
    static/*
    schemas/*
    templates/*
    assets/*
